[gd_scene load_steps=4 format=3 uid="uid://b74h0b2e4dsut"]

[ext_resource type="Script" path="res://scenes/UI/pause_menu.gd" id="1_bee0t"]
[ext_resource type="FontFile" uid="uid://g667fnkrhuy6" path="res://assets/babydoll_font/Baby Doll.otf" id="2_yx1ds"]

[sub_resource type="Theme" id="Theme_gx1g3"]

[node name="pause menu" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.971
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bee0t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -110.0
offset_right = 92.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="retry" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_gx1g3")
theme_override_fonts/font = ExtResource("2_yx1ds")
theme_override_font_sizes/font_size = 40
text = "retry"

[node name="menu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_gx1g3")
theme_override_fonts/font = ExtResource("2_yx1ds")
theme_override_font_sizes/font_size = 40
text = "menu"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_yx1ds")
theme_override_font_sizes/font_size = 40
text = "options"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_yx1ds")
theme_override_font_sizes/font_size = 40
text = "quit
"

[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/retry" to="." method="_on_start_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/retry" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/menu" to="." method="_on_start_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/menu" to="." method="_on_menu_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/menu" to="." method="_on_retry_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_button_down"]
